compiler/tests/fixtures/negative/error_sema_negate.sol
// E1011: cannot negate a non-numeric type.
function start() -> bool {
    return -true;
}
